add AuthController for basic auth methods
